# photoflow

./: .gitignore  LICENSE  PLA.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  catalog.rs  commands.rs  dupes.rs  edit.rs  fileops.rs  lib.rs  thumbs.rs
src/components/: BatchDialogs.tsx  Compare.tsx  Culling.tsx  DuplicatesDialog.tsx  Editor.tsx  GridArea.tsx  HistogramChart.tsx  Icons.tsx  InfoPanel.tsx  Overlays.tsx  Sidebar.tsx  Titlebar.tsx  Viewer.tsx
src/lib/: backend.ts
src/stores/: library.ts  ui.ts
src/styles/: global.css  tokens.css
