[package]
name = "app"
version = "1.0.0"
description = "PhotoFlow — gestor de fotografies minimalista i eficient"
authors = ["ponelplay"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/ponelplay/photoflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
image = "0.25"
kamadak-exif = "0.6"
rayon = "1"
percent-encoding = "2"
dirs = "6"
trash = "5"
tauri-plugin-dialog = "2"

# Optimitzat per a mida d'executable i sense cost en temps d'execució
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
